Update arguments for modern packs